--- a/src/about.njk
+++ b/src/about.njk
@@ -3,19 +3,64 @@ layout: default
 title: About Me
 ---
 
-<article role="main" class="writing">
-    <header class="pb-8">
-        
-        <h1>About Rakshit Soral</h1>
-    </header>
-    <section>
-         <p>For the past 10+ years, I’ve built and scaled omni-channel demand generation engines for B2B SaaS companies, using a mix of ABM, cold outbound, and revenue-focused content strategies to turn lead flow from a drip into a steady stream.
+{% set pageTitle = pageTitle or "About" %}
 
-        <blockquote class="text-4xl leading-none">"If you're a good marketing person, you have to be a little <strike>lazy</strike> crazy. <span class="whitespace-nowrap">- Jim Metcalf</span></blockquote>
-        <p>Along the way, I’ve worked with B2B SaaS and tech companies, led high-performing teams, and consulted for local and international clients to help them increase demand for their products and services. This journey has taken me through building websites, running targeted paid campaigns across LinkedIn, Google, Facebook, and Twitter, and launching email strategies that nurture leads into customers.
+{% extends "Layout.njk" %}
+{% block content %}
+  <div class="gif">
+    <img
+      src="/.netlify/images?url=/images/space.webp"
+      role="presentation"
+      width="300"
+      height="259"
+      decoding="async"
+      alt=""
+    />
+  </div>
 
-Each day, I focus on researching buyer personas, creating content that people actually want to read, and building marketing campaigns that convert interest into revenue. I enjoy testing, refining, and pushing the boundaries of what marketing can do when aligned with business goals.
+  <h1>Milky-Way</h1>
+  <span class="badge">Digital Craftsman (Developer)</span>
 
-My goal is simple: to turn marketing from chaos into a predictable system that fuels growth.</p>
-        <img src="/assets/img/values/illo-clipboard.svg" alt="" class="mx-auto mt-16">
-    
+  <h2>About</h2>
+  <p>
+    Praesent malesuada mi nisi, quis tempus magna venenatis ut.
+    Suspendisse tempor sem at scelerisque congue. Curabitur mollis,
+    mi id molestie finibus, metus sem sagittis nunc, euismod feugiat orci neque non lorem.
+    Aenean sollicitudin erat eu molestie tempus. Nunc ac eros elementum, fermentum lacus at,
+    pellentesque mauris. Suspendisse eros neque, interdum euismod consectetur convallis,
+    porttitor at massa. Phasellus a ultrices arcu. Donec viverra, lorem in pellentesque euismod,
+    libero justo gravida nibh, non ultricies justo purus ultrices est.
+  </p>
+  <p>
+    Ut at interdum dui. Donec ut ante ex. Maecenas id ex eget nibh consequat accumsan.
+    Proin semper semper dui nec feugiat. Donec cursus neque id aliquet finibus. Morbi
+    facilisis turpis nibh, nec dictum orci dictum nec. In hac habitasse platea dictumst.
+    Maecenas mollis turpis vitae turpis bibendum, vitae tristique arcu eleifend.
+  </p>
+
+  <div class="center">
+    <a href="/works/">
+      <button class="btn">My portfolio</button>
+    </a>
+  </div>
+
+  <h2>Skills</h2>
+  <div class="skills center">
+    <img class="skills__img" width="46" height="46" alt="Python" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/python/python-original.svg"/>
+    <img class="skills__img" width="46" height="46" alt="Golang" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/go/go-original-wordmark.svg"/>
+    <img class="skills__img" width="46" height="46" alt="JavaScript" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/javascript/javascript-original.svg"/>
+    <img class="skills__img" width="46" height="46" alt="TypeScript" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/typescript/typescript-original.svg"/>
+    <img class="skills__img" width="46" height="46" alt="Docker" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/docker/docker-original.svg"/>
+    <img class="skills__img" width="46" height="46" alt="Linux" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/linux/linux-original.svg"/>
+    <img class="skills__img" width="46" height="46" alt="Kubernetes" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/kubernetes/kubernetes-original.svg"/>
+    <img class="skills__img" width="46" height="46" alt="Git" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/git/git-original.svg"/>
+  </div>
+
+  <h2>Interests</h2>
+  <p>
+    Ut at interdum dui. Donec ut ante ex. Maecenas id ex eget nibh consequat accumsan.
+    Proin semper semper dui nec feugiat. Donec cursus neque id aliquet finibus. Morbi
+    facilisis turpis nibh, nec dictum orci dictum nec. In hac habitasse platea dictumst.
+    Maecenas mollis turpis vitae turpis bibendum, vitae tristique arcu eleifend.
+  </p>
+{% endblock %}
