--- a/src/about.njk
+++ b/src/about.njk
@@ -5,7 +5,7 @@ title: About Me
 
 {% set pageTitle = pageTitle or "About" %}
 
-{% extends "default.njk" %}
+{% extends "layouts/default.njk" %}
 {% block content %}
   <div class="gif">
     <img
