--- a/src/about.njk
+++ b/src/about.njk
@@ -7,14 +7,14 @@ title: About Me
 
 {% block content %}
 
-  <h1 class="content-center" style="margin-bottom: 0.25rem;">Milky-Way</h1>
+  <h1 class="content-center" style="margin-bottom: 0.25rem;">Rakshit Soral</h1>
   <div class="content-center" style="margin-bottom: 2rem;">
-    <span class="badge">Digital Craftsman (Developer)</span>
+    <span class="badge">Marketing Manager</span>
   </div>
 
   <!-- Profile Image -->
   <div class="content-center">
-   <div class="img relative flex-shrink-0 ml-12 sm:ml-0 sm:mb-8"><img src="/assets/img/Rakshit Soral.png" loading="lazy" alt="Rakshit Soral portrait" height="275" width="275" class="z-10 relative transform -rotate-2"></div>
+   <img src="/assets/img/Rakshit Soral.png" loading="lazy" alt="Rakshit Soral portrait" height="275" width="275">
   </div>
 
   <p class="content-text content-center">
@@ -44,14 +44,25 @@ title: About Me
 
   <h2 class="content-center" style="margin-bottom: 1rem;">Skills</h2>
   <div class="skills content-center">
-    <img class="skills__img" width="46" height="46" alt="Hubspot" src="https://www.flaticon.com/free-icon/hubspot_9534407?term=hubspot&page=1&position=4&origin=search&related_id=9534407"/>
-    <img class="skills__img" width="46" height="46" alt="Golang" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/go/go-original-wordmark.svg"/>
-    <img class="skills__img" width="46" height="46" alt="JavaScript" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/javascript/javascript-original.svg"/>
-    <img class="skills__img" width="46" height="46" alt="TypeScript" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/typescript/typescript-original.svg"/>
-    <img class="skills__img" width="46" height="46" alt="Docker" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/docker/docker-original.svg"/>
-    <img class="skills__img" width="46" height="46" alt="Linux" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/linux/linux-original.svg"/>
-    <img class="skills__img" width="46" height="46" alt="Kubernetes" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/kubernetes/kubernetes-original.svg"/>
-    <img class="skills__img" width="46" height="46" alt="Git" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/git/git-original.svg"/>
+    <img class="skills__img" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/wordpress/wordpress-original.svg" alt="Wordpress" />
+    <img class="skills__img" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/html5/html5-original.svg" alt="HTML" />
+    <img class="skills__img" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/css3/css3-original.svg" alt="CSS" />
+    <img class="skills__img" src="https://logo.svgcdn.com/l/netlify.svg" alt="Netlify" />
+    <img class="skills__img" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/hubspot/hubspot-original.svg" alt="Hubspot" />
+    <img class="skills__img" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg" alt="Github" />
+    <img class="skills__img" src="https://static.mailchimp.com/web/brand-assets/logo-dark.png" alt="Mailchimp" />
+    <img class="skills__img" src="https://seeklogo.com/images/A/apollo-io-logo-457273A16A-seeklogo.com.png" alt="Apollo.io" />
+    <img class="skills__img" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/google/google-original.svg" alt="Google Ads" />
+    <img class="skills__img" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/linkedin/linkedin-original.svg" alt="LinkedIn Ads" />
+    <img class="skills__img" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/facebook/facebook-original.svg" alt="Facebook Ads" />
+    <img class="skills__img" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/twitter/twitter-original.svg" alt="Twitter Ads" />
+    <img class="skills__img" src="https://triblio.com/wp-content/uploads/2023/03/triblio-logo-color.svg" alt="Tribilio" />
+    <img class="skills__img" src="https://app.clay.com/favicon.ico" alt="Clay.com" />
+    <img class="skills__img" src="https://instantly.ai/favicon-32x32.png" alt="Instantly" />
+    <img class="skills__img" src="https://cdn.openai.com/chatgpt/logo.svg" alt="ChatGPT" />
+    <img class="skills__img" src="https://assets.anthropic.com/favicon.ico" alt="Claude" />
+    <img class="skills__img" src="https://deepseek.com/favicon.ico" alt="DeepSeek" />
+    <img class="skills__img" src="https://grok.x.ai/favicon.ico" alt="Grok" />
   </div>
 
   <h2 class="content-center" style="margin-bottom: 1rem;">Interests</h2>
