--- a/src/about.njk
+++ b/src/about.njk
@@ -15,7 +15,7 @@ title: About Me
   <!-- Profile Image -->
   <div class="content-center">
    <img src="/assets/img/Rakshit Soral.png" loading="lazy" alt="Rakshit Soral portrait" height="275" width="275">
-  </div>
+  </div><br>
 
   <p class="content-text content-center">
     For the past 10+ years, I’ve built omni-channel demand generation engines for B2B SaaS companies, using a mix of ABM, cold outbound, and revenue-focused content strategies to turn lead flow from a drip into a steady stream.
