--- a/src/about.njk
+++ b/src/about.njk
@@ -2,7 +2,11 @@
 layout: default
 title: About Me
 ---
-
+<!-- Font Awesome CDN for social icons -->
+  <link
+    rel="stylesheet"
+    href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+  />
 {% set pageTitle = pageTitle or "About" %}
 
 {% block content %}
