--- a/src/about.njk
+++ b/src/about.njk
@@ -113,6 +113,8 @@ title: About Me
 /* General centering for text */
 .content-center {
   text-align: center;
+   display: flex;
+    justify-content: center
 }
 
 /* Limit paragraph width */
@@ -122,13 +124,7 @@ title: About Me
   margin-right: auto;
 }
 
-/* Center the image area absolutely */
-    .image-area {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-    }
+
     
     /* Wrapper containing the image and overlays */
     .img-wrapper {
