--- a/src/about.njk
+++ b/src/about.njk
@@ -18,35 +18,24 @@ title: About Me
       <h2>Rakshit Soral</h2>
       <ul>
         <li>
-          <a href="https://github.com/atuljustano" target="_blank" rel="noopener noreferrer"
+          <a href="https://github.com/rakshitsoral" target="_blank" rel="noopener noreferrer"
             ><i class="fab fa-github"></i
           ></a>
         </li>
         <li>
-          <a href="https://www.instagram.com/atulkprajapati2000/" target="_blank" rel="noopener noreferrer"
-            ><i class="fab fa-instagram"></i
+          <a href="https://www.linkedin.com/in/rakshitsoral/" target="_blank" rel="noopener noreferrer"
+            ><i class="fab fa-linkedin"></i
           ></a>
         </li>
         <li>
-          <a href="https://twitter.com/atuljustano" target="_blank" rel="noopener noreferrer"
+          <a href="https://twitter.com/RakshitSoral" target="_blank" rel="noopener noreferrer"
             ><i class="fab fa-twitter"></i
-          ></a>
-        </li>
-        <li>
-          <a
-            href="https://www.youtube.com/channel/UCf-KfxuY8PZBSD_8RW2nYsw"
-            target="_blank"
-            rel="noopener noreferrer"
-            ><i class="fab fa-youtube"></i
           ></a>
         </li>
       </ul>
     </div>
    
   </div><br>
-
-
-  <h1 class="content-center" style="margin-bottom: 0.25rem;">Rakshit Soral</h1>
   <div class="content-center" style="margin-bottom: 2rem;">
     <span class="badge">Marketing Manager</span>
   </div>
@@ -54,7 +43,7 @@ title: About Me
   
   <p class="content-text content-center">
     For the past 10+ years, I’ve built omni-channel demand generation engines for B2B SaaS companies, using a mix of ABM, cold outbound, and revenue-focused content strategies to turn lead flow from a drip into a steady stream.
-  </p>
+  </p><br>
   <p class="content-text content-center" style="margin-bottom: 2rem;">
    Along the way, I’ve worked with B2B SaaS and tech companies, led high-performing teams, and consulted for local and international clients to help them increase demand for their products and services. 
   </p>
@@ -77,13 +66,13 @@ title: About Me
   </a>
   </div>
 
-  <h2 class="content-center" style="margin-bottom: 1rem;">Skills</h2>
+  <h2 class="content-center" style="margin-bottom: 1rem;">Tools & Technologies</h2>
   <div class="skills content-center">
     <img class="skills__img" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/wordpress/wordpress-original.svg" alt="Wordpress" />
     <img class="skills__img" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/html5/html5-original.svg" alt="HTML" />
     <img class="skills__img" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/css3/css3-original.svg" alt="CSS" />
-    <img class="skills__img" src="https://logo.svgcdn.com/l/netlify.svg" alt="Netlify" />
-    <img class="skills__img" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/hubspot/hubspot-original.svg" alt="Hubspot" />
+    <img class="skills__img" src="https://tse4.mm.bing.net/th/id/OIP.Y65CzMhtrNpp9t05OM9wJQHaHa?pid=Api&P=0&h=180" alt="Netlify" />
+    <img class="skills__img" src="https://cdn-1.webcatalog.io/catalog/hubspot/hubspot-icon.png" alt="Hubspot" />
     <img class="skills__img" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg" alt="Github" />
     <img class="skills__img" src="https://static.mailchimp.com/web/brand-assets/logo-dark.png" alt="Mailchimp" />
     <img class="skills__img" src="https://seeklogo.com/images/A/apollo-io-logo-457273A16A-seeklogo.com.png" alt="Apollo.io" />
