--- a/src/about.njk
+++ b/src/about.njk
@@ -15,7 +15,7 @@ title: About Me
  
     <div class="img-wrapper">
       <img src="/assets/img/Rakshit Soral.png" loading="lazy" alt="Rakshit Soral portrait" height="275" width="275">
-      <h2>Rakshit Soral</h2>
+      <h2>Rakshit Soral, Marketer</h2>
       <ul>
         <li>
           <a href="https://github.com/rakshitsoral" target="_blank" rel="noopener noreferrer"
@@ -36,9 +36,6 @@ title: About Me
     </div>
    
   </div><br>
-  <div class="content-center" style="margin-bottom: 2rem;">
-    <span class="badge">Marketing Manager</span>
-  </div>
 
   
   <p class="content-text content-center">
@@ -74,13 +71,13 @@ title: About Me
     <img class="skills__img" src="https://tse4.mm.bing.net/th/id/OIP.Y65CzMhtrNpp9t05OM9wJQHaHa?pid=Api&P=0&h=180" alt="Netlify" />
     <img class="skills__img" src="https://cdn-1.webcatalog.io/catalog/hubspot/hubspot-icon.png" alt="Hubspot" />
     <img class="skills__img" src="https://toppng.com/uploads/preview/github-logo-png-transparent-background-11659780043felvx3tvxk.png" alt="Github" />
-    <img class="skills__img" src="https://static.mailchimp.com/web/brand-assets/logo-dark.png" alt="Mailchimp" />
-    <img class="skills__img" src="https://seeklogo.com/images/A/apollo-io-logo-457273A16A-seeklogo.com.png" alt="Apollo.io" />
+    <img class="skills__img" src="https://images.squarespace-cdn.com/content/v1/533ac697e4b0885962ac8ede/1499338685403-KNO6B4VBYF94YO0E9WCA/mailchimp_01a.png" alt="Mailchimp" />
+    <img class="skills__img" src="https://cdn.brandfetch.io/idY56OZ9sE/w/400/h/400/theme/dark/icon.jpeg?c=1bxid64Mup7aczewSAYMX&t=1742801747570" alt="Apollo.io" />
     <img class="skills__img" src="https://creazilla-store.fra1.digitaloceanspaces.com/icons/3253827/google-ads-icon-md.png" alt="Google Ads" />
     <img class="skills__img" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/linkedin/linkedin-original.svg" alt="LinkedIn Ads" />
     <img class="skills__img" src="https://keycommerce.com/wp-content/uploads/2020/06/Facebook-Ads-icon.png" alt="Facebook Ads" />
     <img class="skills__img" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/twitter/twitter-original.svg" alt="Twitter Ads" />
-    <img class="skills__img" src="https://triblio.com/wp-content/uploads/2023/03/triblio-logo-color.svg" alt="Tribilio" />
+    <img class="skills__img" src="https://b2bsalesmarketing.exchange/wp-content/uploads/2020/10/Triblio-768x324.png" alt="Tribilio" />
     <img class="skills__img" src="https://app.clay.com/assets/Clay-logo-tilt-2024-DKnp3RSV.png" alt="Clay.com" />
     <img class="skills__img" src="https://digino.org/wp-content/uploads/2023/12/instantly-ai-logo.png" alt="Instantly" />
     <img class="skills__img" src="https://static.vecteezy.com/system/resources/previews/022/841/114/non_2x/chatgpt-logo-transparent-background-free-png.png" alt="ChatGPT" />
@@ -89,13 +86,6 @@ title: About Me
     <img class="skills__img" src="https://crystalpng.com/wp-content/uploads/2025/02/grok_logo-600x600.png" alt="Grok" />
   </div>
 
-  <h2 class="content-center" style="margin-bottom: 1rem;">Interests</h2>
-  <p class="content-text content-center" style="margin-bottom: 3rem;">
-    Ut at interdum dui. Donec ut ante ex. Maecenas id ex eget nibh consequat accumsan.
-    Proin semper semper dui nec feugiat. Donec cursus neque id aliquet finibus. Morbi
-    facilisis turpis nibh, nec dictum orci dictum nec. In hac habitasse platea dictumst.
-    Maecenas mollis turpis vitae turpis bibendum, vitae tristique arcu eleifend.
-  </p>
 {% endblock %}
 
 <style>
