Updated image and added CSS

--- a/src/about.njk
+++ b/src/about.njk
@@ -15,7 +15,7 @@ title: About Me
  
     <div class="img-wrapper">
       <img src="/assets/img/Rakshit Soral.png" loading="lazy" alt="Rakshit Soral portrait" height="275" width="275">
-      <h2>Rakshit Soral, Marketer</h2>
+      <h2>Rakshit Soral</h2>
       <ul>
         <li>
           <a href="https://github.com/rakshitsoral" target="_blank" rel="noopener noreferrer"
@@ -36,6 +36,9 @@ title: About Me
     </div>
    
   </div><br>
+  <div class="content-center" style="margin-bottom: 2rem;">
+    <h3 class="badge">Marketing Manager</h3>
+  </div>
 
   
   <p class="content-text content-center">
