--- a/src/index.njk
+++ b/src/index.njk
@@ -55,27 +55,7 @@ roughjs: true
             <p>I enjoy <a href="/blog" class="link-misc">writing</a> about things I learn & I know, building scalable Digital Marketing campaigns, and learning a bit of <a href="https://github.com/rakshitsoral" class="link-misc">web development</a>, side-by-side.</p>
             <p class="mt-6">When not in front of a screen I like to listen music, play guitar, read books, and binge-watch anime/ series. </p>
         </div>
-        <div class="img relative flex-shrink-0 ml-12 sm:ml-0 sm:mb-8"><div class="img-wrapper">
-      <img src="/assets/img/Rakshit Soral.png" loading="lazy" alt="Rakshit Soral portrait" height="150" width="150">
-      <h2>Rakshit Soral</h2>
-      <ul>
-        <li>
-          <a href="https://github.com/rakshitsoral" target="_blank" rel="noopener noreferrer"
-            ><i class="fab fa-github"></i
-          ></a>
-        </li>
-        <li>
-          <a href="https://www.linkedin.com/in/rakshitsoral/" target="_blank" rel="noopener noreferrer"
-            ><i class="fab fa-linkedin"></i
-          ></a>
-        </li>
-        <li>
-          <a href="https://twitter.com/RakshitSoral" target="_blank" rel="noopener noreferrer"
-            ><i class="fab fa-twitter"></i
-          ></a>
-        </li>
-      </ul>
-    </div></div>
+        <div class="img relative flex-shrink-0 ml-12 sm:ml-0 sm:mb-8"><img src="/assets/img/Rakshit Soral.png" loading="lazy" alt="Rakshit Soral portrait" height="275" width="275" class="z-10 relative transform -rotate-2"></div>
         <span class="curl3 absolute block bg-no-repeat sm:hidden" aria-hidden="true"></span>
     </section>
 </div>
