Added resume in the menu header

--- a/src/_includes/partials/header.njk
+++ b/src/_includes/partials/header.njk
@@ -14,6 +14,7 @@
         <a href="/about" class="{{ 'active' if '/about' in page.url }} p-2 mx-2 text-white inline-block no-underline">About</a>
         <a href="/bio" class="{{ 'active' if '/bio' in page.url }} p-2 mx-2 text-white inline-block no-underline">Bio</a>
         <a href="/blog" class="{{ 'active' if '/blog' in page.url }} p-2 mx-2 text-white inline-block no-underline">Blog</a>
+         <a href="/resume" class="{{ 'active' if '/resume' in page.url }} p-2 mx-2 text-white inline-block no-underline">Resume</a>
     </nav>
     <div class="contact w-1/2 text-right sm:w-full sm:text-left">
         
