--- a/src/_includes/partials/header.njk
+++ b/src/_includes/partials/header.njk
@@ -10,11 +10,13 @@
         <a href="{{ item.url | url }}" class=" {% if page.url == item.url %}active{% endif %}">{{ item.label }}</a>
         {% endfor %}
         -->
-        <a href="/work" class="{{ 'active' if '/work' in page.url }} p-2 mx-2 text-white inline-block no-underline">Work</a>
+        
         <a href="/about" class="{{ 'active' if '/about' in page.url }} p-2 mx-2 text-white inline-block no-underline">About</a>
+        <a href="/work" class="{{ 'active' if '/work' in page.url }} p-2 mx-2 text-white inline-block no-underline">Work</a>
         <a href="/bio" class="{{ 'active' if '/bio' in page.url }} p-2 mx-2 text-white inline-block no-underline">Bio</a>
         <a href="/blog" class="{{ 'active' if '/blog' in page.url }} p-2 mx-2 text-white inline-block no-underline">Blog</a>
          <a href="/resume" class="{{ 'active' if '/resume' in page.url }} p-2 mx-2 text-white inline-block no-underline">Resume</a>
+         <a href="/contact" class="{{ 'active' if '/contact' in page.url }} p-2 mx-2 text-white inline-block no-underline">Contact</a>
     </nav>
     <div class="contact w-1/2 text-right sm:w-full sm:text-left">
         
