--- a/src/contact.njk
+++ b/src/contact.njk
@@ -96,9 +96,9 @@ title: Contact
   --color-border-default: #94a3b8;
   --color-highlight: #7ecac7;
   --color-primary: #23494c;
-  --color-primary-active: #122d30;
-  --color-text-default: #0f172a;
-  --color-text-muted: #475569;
+  --color-primary-active: green;
+  --color-text-default: white;
+  --color-text-muted: white;
 
   --font-family-body: "Work Sans", system-ui, sans-serif;
   --font-family-display: "IBM Plex Serif", system-ui, sans-serif;
