--- a/src/contact.njk
+++ b/src/contact.njk
@@ -61,27 +61,16 @@ title: Contact
         placeholder="Tell us why you&#x27;re interested (optional)"
       ></textarea>
     </div>
-    <div class="fs-field col-span-full">
-      <label class="fs-label" for="referral-source">
-        How Did You Hear About Us?
-      </label>
-      <input
-        class="fs-input"
-        id="referral-source"
-        name="referral-source"
-        placeholder="Optional"
-      />
-    </div>
     <div>  
-        <p class="fs-description" id="terms-privacy-description">
+        <h3 class="fs-description" id="terms-privacy-description">
          Too lazy to fill this out? Book a meeting <a href="https://cal.com/rakshit-soral-ogdma5/30min">here.</a>
-        </p>
+        </h3>
       </div>
     </div>
   </fieldset>
-  <div class="fs-button-group">
-    <button class="fs-button" type="submit">Send Message Now</button>
-  </div>
+  <div class="fs-button-group" style="display: flex; justify-content: flex-start;">
+  <button class="fs-button" type="submit">Send Message Now</button>
+</div>
 </form>
 
 <style>
